# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,13 @@
 import { Router } from "express";
-import { loginUser, userForgetPassword, userRegisteration, verifyUser } from "../controller/auth.controller";
+import { loginUser, userForgotPassword, userRegisteration, verfiyForgotPasswordOtp, verifyUser } from "../controller/auth.controller";
 
 const router = Router();
 router.post('/user-registeration', userRegisteration)
 router.post('/verify-user', verifyUser)
-router.post('/login', loginUser)
-router.post('/forget-password', userForgetPassword)
+router.post('/login-user', loginUser)
+router.post('/forgot-password-user', userForgotPassword);
+router.post('/verify-forgot-password', verfiyForgotPasswordOtp);
+router.post('/reset-password-user', verfiyForgotPasswordOtp);
+
 
 export default router; 
